icon side bar styles added, alignment issues fixed

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,6 +40,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  /* display: flex;
+  flex-direction: row; */
   z-index: 1;
   width: 100%;
   height: 100%;
@@ -79,6 +81,7 @@ body {
 
 .sidebar-wrapper {
   display: flex;
+  background-color: white;
   flex-direction: column;
   z-index: 4;
   overflow: auto;
@@ -102,29 +105,52 @@ body {
 div[class*="sidebar__section"] {
   display: flex;
   flex-direction: column;
-  width: 100%;
+
   justify-content: space-between;
   height: 100%;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
 }
 
 div .sidebar__section-2 {
+  display: block;
+}
+div .sidebar__section-1 {
+  justify-content: center;
+}
+.sidebar__section-2 > ul {
+  display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  height: calc(100% - 2rem);
 }
 div[class*="sidebar__section"] > div {
   display: flex;
-  border: 1px solid green;
+
   flex-direction: column;
   align-items: center;
 }
 
-div[class*="sidebar__division-bar"] > hr {
+hr[class*="sidebar__division-bar"] {
   width: 95%;
-  height: 1%;
+  height: 1px;
+  background: black;
 }
 div[class*="item__"] {
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+
+  border: 1px solid green;
   transition: all 250ms;
+}
+div[class*="item__"] :is(div, a) {
+  width: 100%;
+}
+div[class*="item__"] :is(a) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 div[class*="item__"]:hover {
@@ -150,7 +176,33 @@ div[class*="item__"]:hover {
   width: 100%;
   height: auto;
 }
+.carousel-home {
+  height: 100vh;
+  width: 100vw;
+}
+.carousel-home * {
+  height: 100%;
+}
+.carousel-slide {
+  height: 100%;
+}
 
+.carousel-control-prev-icon {
+  width: 45px;
+  height: 45px;
+
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  width: 45px;
+  height: 45px;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+.carousel-indicators .active {
+  background-color: #f00;
+}
 /* .corr-icon-container {
   display: flex;
   flex-direction: column;
@@ -238,26 +290,4 @@ div[class*="item__"]:hover {
   right: 5px;
 }
 
-.carousel-home {
-  min-width: 80%;
-  max-width: 80%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.carousel-control-prev-icon {
-  width: 45px;
-  height: 45px;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
-}
-
-.carousel-control-next-icon {
-  width: 45px;
-  height: 45px;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
-}
-
-.carousel-indicators .active {
-  background-color: #f00;
-} */
+ */
